[build-system]
requires = ["uv_build>=0.7.19,<0.12"]
build-backend = "uv_build"


[project]
name = "interest-rate-derivatives"
version = "0.1.0"
authors = [
  { name = "Aliaksandra Samuseva & Krzysztof Kuba", email = "a.samuseva@student.uw.edu.pl" },
]
description = "The go-to package for pricing interest rates derivatives."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.14"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "streamlit",
  "plotly",
  "pandas",
  "python-dotenv",
  "numpy>=1.26.0,<2.0",
  "scipy",
]

[project.urls]
Homepage = "https://github.com/AlexSamuseva/interest-rate-derivatives-pricing"
"Bug Tracker" = "https://github.com/AlexSamuseva/interest-rate-derivatives-pricing/issues"
Discussions = "https://github.com/AlexSamuseva/interest-rate-derivatives-pricing/discussions"
Changelog = "https://github.com/AlexSamuseva/interest-rate-derivatives-pricing/releases"


[dependency-groups]
test = [
  "pytest >=9",
  "pytest-cov >=7",
]
dev = [
  { include-group = "test" },
  "ruff",
  "mypy",
  "prek>=0.3.11",
]
docs = [
  "sphinx>=7.0",
  "myst_parser>=0.13",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "furo>=2023.08.17",
]


[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--showlocals"]
strict = true
filterwarnings = [
  "error",
]
log_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["interest_rate_derivatives"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.10"
warn_unused_configs = false
strict = false
warn_unreachable = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
warn_return_any = false
disallow_any_unimported = false

[[tool.mypy.overrides]]
module = "interest_rate_derivatives.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_unused_ignores = false


[tool.ruff]
show-fixes = true

[tool.ruff.lint]
extend-select = [
  "ARG",    # flake8-unused-arguments
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "EM",     # flake8-errmsg
  "EXE",    # flake8-executable
  "FA",     # flake8-future-annotations
  "FLY",    # flynt
  "FURB",   # refurb
  "G",      # flake8-logging-format
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "NPY",    # NumPy specific rules
  "PD",     # pandas-vet
  "PERF",   # perflint
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "PYI",    # flake8-pyi
  "Q",      # flake8-quotes
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slots
  "T10",    # flake8-debugger
  "T20",    # flake8-print
  "TC",     # flake8-type-checking
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "YTT",    # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
]
# Uncomment if using a _compat.typing backport
# typing-modules = ["interest_rate_derivatives._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]

[tool.pylint]
py-version = "3.10"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
good-names = ["B", "T", "P", "P1", "P2", "P0t", "P0T", "P_start", "P_end", "P_up", "P_dn", "P0_Texp", "P0_Tmat", "T_exp", "T_mat", "Bval", "sigma_P", "h", "f0t", "ln_A", "T_i", "K_i", "c_i"]
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
]

[tool.codespell]
ignore-words-list = "ois,te,nd,normale"
